[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitz"
version = "1.0.0"
description = "Which bits are set? A colorized bit visualization CLI tool for exploring binary values, bitwise operations, and register fields."
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Eric Davis", email = "edavis@insanum.com"}
]
maintainers = [
    {name = "Eric Davis", email = "edavis@insanum.com"}
]
keywords = [
    "bits",
    "binary",
    "hex",
    "bitwise",
    "visualization",
    "cli",
    "registers",
    "debugging",
    "embedded",
    "hardware"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
requires-python = ">=3.7"
dependencies = []

[project.scripts]
bitz = "bitz:main"

[project.urls]
Homepage = "https://github.com/insanum/bitz"
Repository = "https://github.com/insanum/bitz"
Issues = "https://github.com/insanum/bitz/issues"

[tool.setuptools]
py-modules = ["bitz"]
